--- a/src/widgets/services/services-section.astro
+++ b/src/widgets/services/services-section.astro
@@ -34,8 +34,7 @@ import { services } from "../../features/services/model/services";
         </div>
     </div>
 
-    <!-- Сервис-карты для мобильных -->
-    <div id="serviceCardsMob">
+    <div id="serviceCardsMob" class="w-full">
         {
             services.map((service, index) => (
                 <div class="service-card-mob opacity-0 translate-y-10 flex flex-col items-center mb-8 last:mb-0 w-full lg:hidden">
@@ -45,7 +44,6 @@ import { services } from "../../features/services/model/services";
         }
     </div>
 
-    <!-- Сервис-карты для десктопа -->
     <div
         id="serviceCardsDesktop"
         class="lg:grid hidden grid-rows-2 w-full 3xl:hidden"
@@ -103,7 +101,6 @@ import { services } from "../../features/services/model/services";
     document.addEventListener("DOMContentLoaded", () => {
         const isMobile = window.innerWidth < 1024; // lg breakpoint
 
-        // Анимация заголовка
         gsap.fromTo(
             "#heading",
             { opacity: 0, y: isMobile ? 20 : 0, x: isMobile ? 0 : -50 },
@@ -144,16 +141,16 @@ import { services } from "../../features/services/model/services";
             gsap.utils.toArray<HTMLElement>(".service-card-mob");
         gsap.fromTo(
             mobileCards,
-            { opacity: 0, y: 20 },
+            { opacity: 0, y: 30 },
             {
                 opacity: 1,
                 y: 0,
-                duration: 1.2,
+                duration: 1.5,
                 ease: "power3.out",
                 stagger: 0.2,
                 scrollTrigger: {
                     trigger: "#serviceCardsMob",
-                    start: "top 85%",
+                    start: "top 65%",
                     toggleActions: "play none none none",
                 },
             },
